--- a/.github/workflows/deploy_aws.yml
+++ b/.github/workflows/deploy_aws.yml
@@ -28,7 +28,6 @@ jobs:
       - name: Deploy to AWS Amplify
         run: |
           npm install -g @aws-amplify/cli
-          amplify init
-          amplify pull d1euyo548c7mzw
+          amplify init d1euyo548c7mzw
           amplify configure --appid d1euyo548c7mzw 
           amplify publish
