--- a/.github/workflows/deploy_aws.yml
+++ b/.github/workflows/deploy_aws.yml
@@ -30,7 +30,7 @@ jobs:
           npm install -g @aws-amplify/cli
           export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
           export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          amplify init --appId d1euyo548c7mzw --envName newstage --yes
+          amplify init --appId d1euyo548c7mzw --envName newstage
           amplify publish
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
