--- a/.github/workflows/deploy_aws.yml
+++ b/.github/workflows/deploy_aws.yml
@@ -28,9 +28,11 @@ jobs:
       - name: Deploy to AWS Amplify
         run: |
           npm install -g @aws-amplify/cli
-          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-          export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          amplify init --appId d1euyo548c7mzw --envName newstage
+          amplify configure set
+          --appId d1euyo548c7mzw
+          --envName newstage
+          --awsAccessKeyId ${{ secrets.AWS_ACCESS_KEY_ID }}
+          --awsSecretAccessKey ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           amplify publish
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
