--- a/.github/workflows/deploy_aws.yml
+++ b/.github/workflows/deploy_aws.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Deploy to AWS Amplify
         run: |
           npm install -g @aws-amplify/cli
-          amplify pull --appId d1euyo548c7mzw --envName staging --yes
+          amplify configure --appId d1euyo548c7mzw --envName staging --yes
           amplify publish --yes
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
